--- a/Markdownファイル/20180801_CISSP取得のためにしたこと.md
+++ b/Markdownファイル/20180801_CISSP取得のためにしたこと.md
@@ -8,28 +8,28 @@
 
 ---
 
-##  業務経歴
-
+- [@yuki476（ゆき）](https://twitter.com/yuki476)
 - 社会人歴10年目
-- ネットワーク屋（最近チーム変わってSE）<br>
+- ネットワーク屋（だと思ってる）<br>
 NW検証作業を9年。チームリーダ5年ほど。
+- 春から業務が変わってSEとして色々。
 
 <pre>
 - 要件定義、環境構築、トラブルシューティング。
 - 検証実施、解析、結果まとめ、進捗管理。
 - 単体、冗長、負荷、NW方式の検討 etc...
 - 環境の保守運用、簡単なセキュリティ対策、業務改善。
-- 5人程度のチーム
+- 5～10人チームのリーダ
 </pre>
 
 ---
 
-## 2. そもそもの経緯
+## 2. 取ることになった経緯
 
 ---
 
 <pre>
-上司）うちの本部から一人出さないといけないんだけど興味ない？
+上司）うちの部署から一人出さないといけないんだけど興味ない？
 
 　私）興味はあるけど、業務忙しいし今年度は受けろったって
 　　　キツイですよ。来年のどっかで受験で良いです？
@@ -50,7 +50,7 @@ NW検証作業を9年。チームリーダ5年ほど。
 
 ---
 
-## (ﾟДﾟ;)…！？
+# (ﾟДﾟ;)…！？
 
 ---
 
@@ -75,7 +75,7 @@ NW検証作業を9年。チームリーダ5年ほど。
 
 ---
 
- **範囲広過ぎ！！！**
+ # **範囲広過ぎ！！！**
 
 ---
 
@@ -85,9 +85,9 @@ NW検証作業を9年。チームリーダ5年ほど。
 
 ---
 
-(ISC)2 Japanの[ドメインガイドブック](https://japan.isc2.org/files/CISSP8_Guidebook_2017_1101.pdf)は4月半ばの
+(ISC)2 Japanの[ドメインガイドブック](https://japan.isc2.org/files/CISSP8_Guidebook_2017_1101.pdf)は
 
-更新が反映されていない。
+4月半ばの更新が反映されていない。
 
 最新情報は[CISSP Ultimate Guide](https://www.isc2.org/Certifications/Ultimate-Guides/CISSP?utm_campaign=T-HQ-CISSPultimateguide&utm_source=isc2web&utm_medium=unbounce#contact-form-header)を参照。
 
@@ -101,7 +101,7 @@ Domain 2：アセットセキュリティ以外が1%ずつ増加。
 
 冗談抜きで
 
-*物理、ソフト、NW、ハード、マネジメント*
+*ハード、ソフト、NW、セキュリティ、マネジメント*
 
 **全部まんべんなく出る**
 
@@ -135,8 +135,6 @@ P34 情報セキュリティ認定・資格レベルマップ
 
 ---
 
-## 3.2 情報処理安全確保支援士との関係
-
 - [産業構造審議会 商務流通情報分科会 情報経済小委員会 IT人材ワーキンググループ（第5回）‐配布資料](http://www.meti.go.jp/committee/sankoushin/shojo/johokeizai/it_jinzai_wg/005_haifu.html)
 <pre>
 資料1 セキュリティ人材の能力評価を巡る現状と課題
@@ -150,17 +148,23 @@ P34 情報セキュリティ認定・資格レベルマップ
 </pre>
 
 
-"情報処理安全確保支援士"はCISSPをかなり意識して策定。
+"情報処理安全確保支援士"は
+
+CISSPをかなり意識して策定。
 
 ---
 
-## 3.3 私見
+## 3.2 私見
 
 私が情報処理安全確保支援士の問題を解いてみて
-受けた印象は、ここの分類図と同じ感じ。
+
+受けた印象は、ここの分類図とほぼ同じ感じ。
+
+<br>
 
 [セキュリティ関連の資格一覧と難易度！あなたにぴったりの資格は？](https://cybersecurity-jp.com/how-to/21726)
 
+<br>
 
 今後どうなるのかは私も知りたい………
 
@@ -185,7 +189,7 @@ https://japan.isc2.org/cissp_training.html
 
 - 研修の前提条件
 
-"専門知識がある"前提で話が進む。<br>
+**"専門知識はある"前提**で話が進む。<br>
 　⇨ 無い部分が多いとキツイ
 
 受験要件
@@ -202,7 +206,15 @@ CISSP CBK8ドメインのうち、2つもしくはそれ以上のドメインに
 
 ---
 
-落ちたやつが今喋ってる()
+落ちたやつが今喋ってます（）
+
+<br>
+大変、良い研修ですが<br>
+**断じて研修だけで受かるものでは無いです**
+
+<pre>
+"なんでも全部一人でやれちゃうエンジニア"なら受かるかと思いますが……
+</pre>
 
 ---
 
@@ -317,9 +329,7 @@ D3. セキュリティエンジニアリング
 
 これはこういう引っ掛け狙って出したな。
 
-この選択肢が正解なら問題文はこう。 
-
-etc...
+この選択肢が正解なら問題文はこう。 etc...
 
 <pre>
 総合テスト250問分これが出来れば、
@@ -331,9 +341,8 @@ etc...
 ### 6.3 弱点の個別分野を
 <br>
 
-どの分野の単語かはわかるけど説明できない
-
-部分を全部書きだして一覧化。
+"どの分野の単語かはわかるけど説明できない"<br>
+を全部書きだして一覧化。
 
 しっかり調べて覚える
 
@@ -353,14 +362,14 @@ etc...
 【このレベルまで覚える】
 リレーショナリーデータベースの原則
 
-・原子性
+・原子性 Atomicity
 トランザクションが一部でも失敗した場合に全て取り消し戻す。
 処理が全て正常に実施されないと反映させない特性。
-・一貫性
+・一貫性 Consistency
 トランザクションの前後で整合性を保つこと。
-・独立性
+・独立性 Isolation
 トランザクション中の操作が他から隠蔽され、影響を与えないこと。
-・永続性
+・永続性 Durability
 コミットされたら確実に反映されて結果が失われないこと。
 
 独立性は厳密に担保すると並列処理が不可能になるため、
@@ -391,7 +400,7 @@ CISSPの視点はやたらと広い！
 
 - 時期によっては日数が少ない
 - 会場が限られている<br>
-[プロフェッショナルセンタ 東京・大阪](https://www.pearsonvue.co.jp/test-taker/Pearson-Professional-Center-Tour.aspx)と福岡一箇所のみ。<br>
+[プロフェッショナルセンタ 東京・大阪](https://www.pearsonvue.co.jp/test-taker/Pearson-Professional-Center-Tour.aspx)と<br>福岡一箇所のみ。
 
 - **キャンセルは\$100、変更は$50手数料が発生**
 
@@ -425,18 +434,22 @@ CISSPの視点はやたらと広い！
 
 ### 手応え感
 
-前提
+前提<br>
 調査用の採点されない問題が25問(10%)ある。
 
 <pre>
 ・1回目落ちた時：600点不合格
 少し悩む～全然分かんないが70個ぐらい
+全然分からない20個、詳細思い出せないが30個、
+これ迷うなぁぐらいが20個ぐらいのイメージ。
 250問全部解くのに3時間ぐらい。
 </pre>
 
 <pre>
 ・2回目合格した時
-少し悩む～全然分からない が50個弱
+少し悩む～全然分からない が40個弱
+全然分からないのは10個ぐらい。
+迷うけど多分これが20個。勘が10個ぐらいのイメージ。
 250問解くのに2時間ちょい。
 </pre>
 
@@ -448,7 +461,7 @@ CISSPの視点はやたらと広い！
 合格なら結果レポートは紙１枚。<br>
 不合格なら２枚になる。
 
-不合格なら点数の悪い順番にドメインが
+不合格なら点数の悪い順番にドメインが<br>
 提示されているので捨てずに次に活かす！
 
 ---
@@ -474,21 +487,21 @@ CISSPの視点はやたらと広い！
 
 ---
 
-## 個人的な印象
+### 個人的な印象
 150時間ぐらい勉強したら受かりそうな人
 
 <pre>
 システムを要件定義～リリースまで複数回やってる。
-NW/ソフト/サーバ/運用/マネジメント/セキュリティのどれか
-2つぐらいプロフェッショナルで、サブで追加2つぐらいやれる。
-どの分野も技術的な会話がある程度、理解できる。
+NW/ソフト/サーバ/運用/評価・テスト/マネジメント/セキュリティのどれか
+2ぐらいプロフェッショナルで、サブで追加2～4ぐらいやれる。
+どの分野の技術的な議論でも、問題なく議事録とれる程度は理解できる。
 </pre>
 
 <br>
 プロ1つだけだと基礎の勉強が大変かも。
 
 <pre>
-私の場合はNWはプロ。運用、マネジメントがサブ。
+私の場合はNWと評価・テストはプロ。運用、マネジメントがサブ。
 サーバはちょっと触る。検証でApache、DNS、RADIUSは建てた＆使ってた。
 ソフト開発はなし。簡単に読める程度。
 Teratermマクロ、Pythonスクリプト少し書いたり、改良したり。
@@ -507,18 +520,21 @@ Teratermマクロ、Pythonスクリプト少し書いたり、改良したり。
 
 ---
 
-受けるなら"覚悟"して取り組みましょう。
+受けるなら**覚悟**して取り組みましょう。
 
 合格後もポイント（CPE）稼ぎが必要です。
 
 ---
 
 気になる方は 
+
 [(ISC)2 日本語版サイト](https://japan.isc2.org/)
+
 [(ISC)2 Japan Twitter](https://twitter.com/isc2_japan)
 
 
-偶に、無料セミナーなんかもやってるみたいです。
+無料セミナーなんかもやってるみたいです。
+
 [2018/06/25 CISSPチャレンジセミナー](http://www.cvent.com/events/cissp-/event-summary-a92883cebc9f4913a89b59518c5de252.aspx)
 
 ---
